tests/ui/tokio_select.stderr
error: nondeterministic workflow API detected; use durust::select! instead
 --> tests/ui/tokio_select.rs:2:10
  |
2 | async fn bad(_: ()) -> durust::Result<()> {
  |          ^^^
